--- a/.gitmodules
+++ b/.gitmodules
@@ -8125,9 +8125,6 @@
 [submodule "acepack@vubiostat"]
 	path = acepack@vubiostat
 	url = ssh://git@github.com/vubiostat/acepack
-[submodule "LakeModelDriver@wubulks"]
-	path = LakeModelDriver@wubulks
-	url = ssh://git@github.com/wubulks/LakeModelDriver
 [submodule "x13binary@x13org"]
 	path = x13binary@x13org
 	url = ssh://git@github.com/x13org/x13binary
@@ -8494,3 +8491,60 @@
 [submodule "EarthMesh@zhongwangwei"]
 	path = EarthMesh@zhongwangwei
 	url = ssh://git@github.com/zhongwangwei/EarthMesh
+[submodule "FortranToolsForSoilScienceModeling@SIADSiM"]
+	path = FortranToolsForSoilScienceModeling@SIADSiM
+	url = ssh://git@github.com/SIADSiM/FortranToolsForSoilScienceModeling
+[submodule "PATMO@SophiaAtmo"]
+	path = PATMO@SophiaAtmo
+	url = ssh://git@github.com/SophiaAtmo/PATMO
+[submodule "miriad@csiro"]
+	path = miriad@csiro
+	url = ssh://git@github.com/csiro/miriad
+[submodule "FROG@dmr-dj"]
+	path = FROG@dmr-dj
+	url = ssh://git@github.com/dmr-dj/FROG
+[submodule "calmat@hassaniriad"]
+	path = calmat@hassaniriad
+	url = ssh://git@github.com/hassaniriad/calmat
+[submodule "economic-simulation@ianfr"]
+	path = economic-simulation@ianfr
+	url = ssh://git@github.com/ianfr/economic-simulation
+[submodule "fortran-compiler-tests@imciner2"]
+	path = fortran-compiler-tests@imciner2
+	url = ssh://git@github.com/imciner2/fortran-compiler-tests
+[submodule "Fortran-Expression-Evaluator@ivomarb"]
+	path = Fortran-Expression-Evaluator@ivomarb
+	url = ssh://git@github.com/ivomarb/Fortran-Expression-Evaluator
+[submodule "1976-standard-atmosphere@jacobwilliams"]
+	path = 1976-standard-atmosphere@jacobwilliams
+	url = ssh://git@github.com/jacobwilliams/1976-standard-atmosphere
+[submodule "fortfront@lazy-fortran"]
+	path = fortfront@lazy-fortran
+	url = ssh://git@github.com/lazy-fortran/fortfront
+[submodule "fortplot@lazy-fortran"]
+	path = fortplot@lazy-fortran
+	url = ssh://git@github.com/lazy-fortran/fortplot
+[submodule "AVISM@oscarmonllor99"]
+	path = AVISM@oscarmonllor99
+	url = ssh://git@github.com/oscarmonllor99/AVISM
+[submodule "DataFort@rngil"]
+	path = DataFort@rngil
+	url = ssh://git@github.com/rngil/DataFort
+[submodule "fortran_script@sdm900"]
+	path = fortran_script@sdm900
+	url = ssh://git@github.com/sdm900/fortran_script
+[submodule "mheap@trifling"]
+	path = mheap@trifling
+	url = ssh://git@github.com/trifling/mheap
+[submodule "fortran_cubatures@willklausler"]
+	path = fortran_cubatures@willklausler
+	url = ssh://git@github.com/willklausler/fortran_cubatures
+[submodule "fortran_rationals@willklausler"]
+	path = fortran_rationals@willklausler
+	url = ssh://git@github.com/willklausler/fortran_rationals
+[submodule "fortran_shapefuncs@willklausler"]
+	path = fortran_shapefuncs@willklausler
+	url = ssh://git@github.com/willklausler/fortran_shapefuncs
+[submodule "ForAdjoint@xumi1993"]
+	path = ForAdjoint@xumi1993
+	url = ssh://git@github.com/xumi1993/ForAdjoint
