Update project list from fortran-lang.org

--- a/.gitmodules
+++ b/.gitmodules
@@ -8521,3 +8521,9 @@
 [submodule "DigiTWind@UMaine-W2"]
 	path = projects/DigiTWind@UMaine-W2
 	url = ssh://git@github.com/UMaine-W2/DigiTWind
+[submodule "projects/fortran-ncurses@interkosmos"]
+	path = projects/fortran-ncurses@interkosmos
+	url = ssh://git@github.com/interkosmos/fortran-ncurses
+[submodule "projects/diffstruc@nedtaylor"]
+	path = projects/diffstruc@nedtaylor
+	url = ssh://git@github.com/nedtaylor/diffstruc
