--- a/src/Makefile
+++ b/src/Makefile
@@ -216,30 +216,31 @@ add-new-projects:	fortran-lang-new-projects beliavsky-new-projects
 
 # Get new projects for fortran-lang.org.
 # Only look at Git projects (not sourceforge or whatever).
-fortran-lang-new-projects:	fortran-lang-projects.txt
-	for P in `cat fortran-lang-projects.txt`; do \
+fortran-lang-new-projects:	${BUILD_ROOT}/fortran-lang-projects.txt
+	for P in `cat ${BUILD_ROOT}/fortran-lang-projects.txt`; do \
 		case "$$P" in \
 			git*) ;; \
 			*) continue;; \
 		esac; \
-		D="$$(echo "$$P" | awk -F / '{ print $$3 "@" $$2 }')"; \
-	    if grep "^$$D:" project-exceptions.txt; then \
-			echo "$$D is on the project exception list."; \
+	        SM="$$(echo "$$P" | awk -F / '{ print $$3 "@" $$2 }')"; \
+		D="${PROJECTS_DIR}/$$SM"; \
+	    if grep "^$$SM:" project-exceptions.txt; then \
+			echo "$$SM is on the project exception list."; \
 			echo ""; \
-		elif [[ -d $$D ]]; then \
-			echo "$$D exists already"; \
+		elif [[ -d "$$D" ]]; then \
+			echo "$$SM exists already in $$D"; \
 		else \
 			if git submodule add "ssh://git@$$P" "$$D"; then \
-			    echo "$$D new"; \
+			    echo "$$SM new"; \
 			    git submodule update --init "$$D"; \
 		    else \
-		        echo "$$D failed; probably no longer available"; \
+		        echo "$$SM failed; probably no longer available"; \
 		    fi; \
 		fi; \
 	done
 
-${BUILD_ROOT}/fortran-lang-projects.txt:	fortran-lang-category-urls.txt
-	for P in `cat fortran-lang-category-urls.txt`; do \
+${BUILD_ROOT}/fortran-lang-projects.txt:	${BUILD_ROOT}/fortran-lang-category-urls.txt
+	for P in `cat ${BUILD_ROOT}/fortran-lang-category-urls.txt`; do \
 		curl -L --no-progress-meter "$$P" \
 		| sed -n -e '/^<p class="rubric".*<span class="/s;.*href="https*://\([^"]*\).*;\1;p'; \
 	done \
@@ -265,17 +266,18 @@ beliavsky-new-projects:	${BUILD_ROOT}/beliavsky-projects.txt
 	        git*) ;; \
 	        *) continue;; \
 	    esac; \
-	    D="$$(echo "$$P" | awk -F / '{ print $$3 "@" $$2 }')"; \
-	    if grep "^$$D:" project-exceptions.txt; then \
-	        echo "$$D is on the project exception list."; \
+	    SM="$$(echo "$$P" | awk -F / '{ print $$3 "@" $$2 }')"; \
+	    D="$$PROJECTS_DIR/$$SM"; \
+	    if grep "^$$SM:" project-exceptions.txt; then \
+	        echo "$$SM is on the project exception list."; \
 		echo ""; \
 	    elif [[ -d $$D ]]; then \
-	        echo "$$D exists already"; \
+	        echo "$$SM exists already in $$D"; \
 	    elif git submodule add "ssh://git@$$P" "$$D"; then \
-	           echo "$$D new"; \
+	           echo "$$SM new"; \
 	           git submodule update --init "$$D"; \
 	    else \
-	        echo "$$D failed; probably no longer available"; \
+	        echo "$$SM failed; probably no longer available"; \
 	    fi; \
 	done
 
