Add files from Beliavsky's web pages

--- a/.gitmodules
+++ b/.gitmodules
@@ -8527,3 +8527,60 @@
 [submodule "projects/diffstruc@nedtaylor"]
 	path = projects/diffstruc@nedtaylor
 	url = ssh://git@github.com/nedtaylor/diffstruc
+[submodule "projects/compliancefort@ArturInspector"]
+	path = projects/compliancefort@ArturInspector
+	url = ssh://git@github.com/ArturInspector/compliancefort
+[submodule "projects/facsimile@FortranGoingOnForty"]
+	path = projects/facsimile@FortranGoingOnForty
+	url = ssh://git@github.com/FortranGoingOnForty/facsimile
+[submodule "projects/fortbite@FortranGoingOnForty"]
+	path = projects/fortbite@FortranGoingOnForty
+	url = ssh://git@github.com/FortranGoingOnForty/fortbite
+[submodule "projects/fortress@FortranGoingOnForty"]
+	path = projects/fortress@FortranGoingOnForty
+	url = ssh://git@github.com/FortranGoingOnForty/fortress
+[submodule "projects/fortsh@FortranGoingOnForty"]
+	path = projects/fortsh@FortranGoingOnForty
+	url = ssh://git@github.com/FortranGoingOnForty/fortsh
+[submodule "projects/fuss@FortranGoingOnForty"]
+	path = projects/fuss@FortranGoingOnForty
+	url = ssh://git@github.com/FortranGoingOnForty/fuss
+[submodule "projects/sniffert@FortranGoingOnForty"]
+	path = projects/sniffert@FortranGoingOnForty
+	url = ssh://git@github.com/FortranGoingOnForty/sniffert
+[submodule "projects/pgex001@FraLaz1971"]
+	path = projects/pgex001@FraLaz1971
+	url = ssh://git@github.com/FraLaz1971/pgex001
+[submodule "projects/MHD@JaimanP1"]
+	path = projects/MHD@JaimanP1
+	url = ssh://git@github.com/JaimanP1/MHD
+[submodule "projects/BLAS77Interface@foxtran"]
+	path = projects/BLAS77Interface@foxtran
+	url = ssh://git@github.com/foxtran/BLAS77Interface/
+[submodule "projects/jflib@jabbalaci"]
+	path = projects/jflib@jabbalaci
+	url = ssh://git@github.com/jabbalaci/jflib
+[submodule "projects/gfortran-testsuite@lazy-fortran"]
+	path = projects/gfortran-testsuite@lazy-fortran
+	url = ssh://git@github.com/lazy-fortran/gfortran-testsuite
+[submodule "projects/mk-fdeps@lsmenicucci"]
+	path = projects/mk-fdeps@lsmenicucci
+	url = ssh://git@github.com/lsmenicucci/mk-fdeps
+[submodule "projects/fortran-calc@muhammad-fiaz"]
+	path = projects/fortran-calc@muhammad-fiaz
+	url = ssh://git@github.com/muhammad-fiaz/fortran-calc
+[submodule "projects/fortran-lapack-examples@perazz"]
+	path = projects/fortran-lapack-examples@perazz
+	url = ssh://git@github.com/perazz/fortran-lapack-examples
+[submodule "projects/pyTSFoil@swayli94"]
+	path = projects/pyTSFoil@swayli94
+	url = ssh://git@github.com/swayli94/pyTSFoil
+[submodule "projects/Collinear-Lagrange-Points@tstenborg"]
+	path = projects/Collinear-Lagrange-Points@tstenborg
+	url = ssh://git@github.com/tstenborg/Collinear-Lagrange-Points
+[submodule "projects/FortranVisualizer@Lor1290"]
+	path = projects/FortranVisualizer@Lor1290
+	url = ssh://git@github.com/Lor1290/FortranVisualizer
+[submodule "projects/CoLM-External-Lake@wubulks"]
+	path = projects/CoLM-External-Lake@wubulks
+	url = ssh://git@github.com/wubulks/CoLM-External-Lake
