Monthly update from remote repos

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@
 # Miscellany
 **/.DS_Store
 .markdown-preview.html
+src/*.log
 
 # Files that we commit to git as compressed
-all-files.txt
-all-fortran-files-attr.txt
+build/all-files.txt
+build/all-fortran-files-attr.txt
